--- a/Example/www/css/index.css
+++ b/Example/www/css/index.css
@@ -18,6 +18,7 @@
  */
 * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+    outline: none;
 }
 
 body {
